2005/06/23 niteria
- Implemented Feature 1225978: Auto-Expand of Navigator Trees after loading project

2005/06/19 owieland
- Implemented Feature 551087: Marking missing files
- Implemented Feature 597717: Saving ignored words

2005/06/17 owieland
- Implemented Feature 579593: Line numbering
- Fixed bug 1222824: ALT+[^] makes it crash
- Implemented Feature 1222733: eqnarray is obsolete

2005/06/16 owieland
- Implemented Feature 575104:  Parsing BibTeX files

2005/06/09 owieland
- Implemented Feature 559096: Auto-Complete function. Press Ctrl+Space during editing to use it.
  The shipped file packages.xml contains an (incomplete) snapshot of available LaTeX commands. 
  So feel free to add/correct/remove entries.

2005/05/21 svenwiegand
- Updated version information and setup

2005/05/18 niteria
- Fixed Bug 1201271: Cannot Create Project Folder
- Fixed Bug 659988: Can't create Project in recursive non-exist path on floppy
- Fixed Bug 1199799: Warning as Error (pdftex)

2005/03/19 vachis
- Fixed Bug: bad brace highlighting when cursos is at ^ in: "[^citeVisSym] and one presses Ctrl-Delete.

2005/03/19 svenwiegand
- Fixed Bug 1166521: Error when calling online help, while help is not open

2005/03/16 vachis
- Fixed Bugs: inconsistent behavior of normal selection and brace block selection 
  unmatched brace (after Ctrl+M) disappear when scrolling
  disable brace higlighting when a selection is pressent
  bugs in brace block selection

2005/03/13 niteria
- Implemented Feature 547432: Auto-Preview after Building Output
- Added -max-print-line=120 to the compiler options, if mikTeX is installed.

2005/03/12 niteria
- Fixed Bug 1037280: Failed to create project in WebDav folder
  WebDAV NOT supported at all. I just fixed the crash.
- Fixed Bug 1112058: tps-file stores global location of opened files
  Now relative paths are saved - thus, it is save to move folders with tps-files.
- Fixed Bug 893376: Cryptic COM error when XML not installed